--- a/driver/Dockerfile.base
+++ b/driver/Dockerfile.base
@@ -1,5 +1,5 @@
 # Any analysis-runner driver image must at least include gcloud and git.
-FROM ubuntu:22.04
+FROM python:3.10-bullseye
 
 RUN apt update && apt install -y \
         apt-transport-https \
