Add metamist to driver image
Add metamist, leave sample-metadata temporarily until the SG deploy has been completed

--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -46,5 +46,6 @@ RUN apt-get update && \
         hail \
         pyarrow \
         sample-metadata \
+        metamist \
         selenium>=3.8.0 \
         statsmodels
