--- a/.github/workflows/copy_dataproc_init_scripts.yaml
+++ b/.github/workflows/copy_dataproc_init_scripts.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "dataproc/init_scripts/install_common.sh"
+      - "dataproc/init_scripts/install_phantomjs.sh"
 jobs:
   copy_init_scripts:
     runs-on: ubuntu-latest
