Update copy_dataproc script to fetch version

--- a/.github/workflows/copy_dataproc_init_scripts.yaml
+++ b/.github/workflows/copy_dataproc_init_scripts.yaml
@@ -23,4 +23,5 @@ jobs:
 
     - name: "copy scripts"
       run: |
-        gcloud storage cp "dataproc/init_scripts/*.sh" gs://cpg-common-main/hail_dataproc/
+        HAIL_VERSION=$(grep "DEFAULT_HAIL_VERSION = '" analysis_runner/dataproc.py | awk -F\' '{print $2}')
+        gcloud storage cp "dataproc/init_scripts/*.sh" gs://cpg-common-main/hail_dataproc/${HAIL_VERSION}/
