Apply suggestions from code review
Co-authored-by: John Marshall <john.marshall@populationgenomics.org.au>

--- a/.github/workflows/copy_dataproc_init_scripts.yaml
+++ b/.github/workflows/copy_dataproc_init_scripts.yaml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - "dataproc/init_scripts/install_common.sh"
-      - "dataproc/init_scripts/install_phantomjs.sh"
+      - "dataproc/init_scripts/*.sh"
 jobs:
   copy_init_scripts:
     runs-on: ubuntu-latest
