Update hail in dataproc and support multiple versions (#644)
* Bump to 22.04; add comments; fix broken image

* Updates to docs

* Fix trailing whitespace

* Change to US spelling

* Clarify pip install comment

* Update dataproc/Dockerfile

Only match and edit pip_deps line

Co-authored-by: John Marshall <john.marshall@populationgenomics.org.au>

* Update README.md

Co-authored-by: John Marshall <john.marshall@populationgenomics.org.au>

* Apply review feedback + bump hail

* Bump version: 2.42.0 → 2.43.0

* Move some installs to dataproc layer

* Point setup_dataproc to test location

* Disable crypto as package

* Make dataproc example cwd independent

* Reduce how often copy dataproc init scripts is called

* Reneg on the cloudbuild config

* Update copy_dataproc script to fetch version

* Support multiple dataproc versions (to allow a quick rollback)

* Remove package uninstall during init

* Update dataproc README

* Update dataproc/README.md

Co-authored-by: Matt Welland <mattwellie@gmail.com>

* Add a recommendation failing to start clusters

* Apply suggestions from code review

Co-authored-by: John Marshall <john.marshall@populationgenomics.org.au>

* Apply review feedback

* Dataproc cluster uses 3.10.8 by default

* Remove duplicate path

* Linting :sigh:

---------

Co-authored-by: John Marshall <john.marshall@populationgenomics.org.au>
Co-authored-by: Michael Franklin <illusional@users.noreply.github.com>
Co-authored-by: Michael Franklin <22381693+illusional@users.noreply.github.com>
Co-authored-by: Matt Welland <mattwellie@gmail.com>

--- a/.github/workflows/copy_dataproc_init_scripts.yaml
+++ b/.github/workflows/copy_dataproc_init_scripts.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "dataproc/init_scripts/*.sh"
 jobs:
   copy_init_scripts:
     runs-on: ubuntu-latest
@@ -20,4 +22,5 @@ jobs:
 
     - name: "copy scripts"
       run: |
-        gcloud storage cp "dataproc/init_scripts/*.sh" gs://cpg-common-main/hail_dataproc/
+        HAIL_VERSION=$(grep "DEFAULT_HAIL_VERSION = '" analysis_runner/dataproc.py | awk -F\' '{print $2}')
+        gcloud storage cp "dataproc/init_scripts/*.sh" gs://cpg-common-main/hail_dataproc/${HAIL_VERSION}/
