Use workload identity federation + cheeky dataproc

--- a/.github/workflows/copy_dataproc_init_scripts.yaml
+++ b/.github/workflows/copy_dataproc_init_scripts.yaml
@@ -1,11 +1,15 @@
 name: Copy Dataproc init scripts
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-    paths:
-      - "dataproc/init_scripts/*.sh"
+    inputs:
+      hail_version:
+        description: 'Numerical hail version number (eg: 0.2.126)'
+        required: true
+
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   copy_init_scripts:
     runs-on: ubuntu-latest
@@ -14,13 +18,17 @@ jobs:
     - name: "checkout repo"
       uses: actions/checkout@v2
 
-    - name: "gcloud setup"
-      uses: google-github-actions/setup-gcloud@v0
+    - id: "google-cloud-auth"
+      name: "Authenticate to Google Cloud"
+      uses: "google-github-actions/auth@v1"
       with:
-        project_id: analysis-runner
-        service_account_key: ${{ secrets.GCP_SERVER_DEPLOY_KEY }}
+        workload_identity_provider: "projects/370374240567/locations/global/workloadIdentityPools/gh-pool/providers/gh-provider"
+        service_account: "server-deploy@analysis-runner.iam.gserviceaccount.com"
+
+    - id: "google-cloud-sdk-setup"
+      name: "Set up Cloud SDK"
+      uses: google-github-actions/setup-gcloud@v1
 
     - name: "copy scripts"
       run: |
-        HAIL_VERSION=$(grep "DEFAULT_HAIL_VERSION = '" analysis_runner/dataproc.py | awk -F\' '{print $2}')
-        gcloud storage cp "dataproc/init_scripts/*.sh" gs://cpg-common-main/hail_dataproc/${HAIL_VERSION}/
+        gcloud storage cp "dataproc/init_scripts/*.sh" gs://cpg-common-main/hail_dataproc/${{ github.event.inputs.hail_version }}/
