--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -7,6 +7,10 @@ on:
         required: true
         default: "main"
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   deploy_server:
     runs-on: ubuntu-latest
@@ -38,11 +42,16 @@ jobs:
       run: |
         echo "IMAGE_TAG=${{ github.sha }}-hail-$HAIL_SHA" >> $GITHUB_ENV
 
-    - name: "gcloud setup"
-      uses: google-github-actions/setup-gcloud@v0
+    - id: "google-cloud-auth"
+      name: "Authenticate to Google Cloud"
+      uses: "google-github-actions/auth@v1"
       with:
-        project_id: analysis-runner
-        service_account_key: ${{ secrets.GCP_SERVER_DEPLOY_KEY }}
+        workload_identity_provider: "projects/370374240567/locations/global/workloadIdentityPools/gh-pool/providers/gh-provider"
+        service_account: "server-deploy@analysis-runner.iam.gserviceaccount.com"
+
+    - id: "google-cloud-sdk-setup"
+      name: "Set up Cloud SDK"
+      uses: google-github-actions/setup-gcloud@v1
 
     - name: "gcloud docker auth"
       run: |
