--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.10-slim
 
 ENV PYTHONUNBUFFERED True
+WORKDIR /opt/app
 
 COPY requirements.txt ./
-RUN pip3 install -r requirements.txt
+RUN pip3 install --no-cache-dir --no-deps -r requirements.txt
 
 COPY main.py ./
 
-CMD exec gunicorn --bind :$PORT --workers 1 --threads 8 --timeout 0 main:app
+CMD ["exec", "gunicorn", "--bind", ":$PORT", "--workers", "1", "--threads", "8", "--timeout", "0", "main:app"]
