--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -24,10 +24,10 @@ jobs:
 
     steps:
     - name: "checkout analysis-runner repo"
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: "checkout Hail repo"
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         repository: "populationgenomics/hail"
         ref: ${{ github.event.inputs.hail_ref }}
@@ -44,14 +44,14 @@ jobs:
 
     - id: "google-cloud-auth"
       name: "Authenticate to Google Cloud"
-      uses: "google-github-actions/auth@v1"
+      uses: google-github-actions/auth@v2
       with:
         workload_identity_provider: "projects/370374240567/locations/global/workloadIdentityPools/gh-pool/providers/gh-provider"
         service_account: "server-deploy@analysis-runner.iam.gserviceaccount.com"
 
     - id: "google-cloud-sdk-setup"
       name: "Set up Cloud SDK"
-      uses: google-github-actions/setup-gcloud@v1
+      uses: google-github-actions/setup-gcloud@v2
 
     - name: "gcloud docker auth"
       run: |
@@ -96,11 +96,26 @@ jobs:
         URL=$(gcloud run services describe server-test --region australia-southeast1 --platform managed --format "value(status.url)")
         TOKEN=$(gcloud auth print-identity-token --impersonate-service-account="server-deploy@analysis-runner.iam.gserviceaccount.com" --audiences="$URL" --include-email)
 
-        curl --fail --silent --show-error -X POST \
-            -H "Authorization: Bearer $TOKEN" \
-            -H "Content-Type:application/json" \
-            -d '{"output": "ci-test-batch/v42", "dataset": "fewgenomes", "accessLevel": "test", "repo": "analysis-runner", "commit": "${{ github.sha }}", "cwd": "test", "script": ["./main.py"], "description": "analysis-runner-test", "wait": true}' \
-            $URL
+        req_obj='{"output": "ci-test-batch/v42", "dataset": "fewgenomes", "accessLevel": "test", "repo": "analysis-runner", "commit": "${{ github.sha }}", "cwd": "test", "script": ["./main.py"], "description": "analysis-runner-test", "wait": true}'
+
+        # sometimes the container takes about 3-4 minutes to load the first time
+        # this causes a timeout because we're waiting, so we retry a few times
+        exit_status=0
+        for i in {1..3}; do
+            curl --fail --silent --show-error -X POST \
+                -H "Authorization: Bearer $TOKEN" \
+                -H "Content-Type:application/json" \
+                -d $req_obj \
+                $URL && break || { exit_status=$?; sleep 5; }
+
+            if [ $i -eq 3 ]; then
+                echo "Failed to submit test batch"
+                exit $exit_status
+            fi
+
+            echo "Retrying due to curl exit status: $exit_status ..."
+
+        done
 
     - name: "deploy server"
       run: |
