--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,11 @@ repos:
       - id: debug-statements
       - id: check-added-large-files
 
+  - repo: https://github.com/populationgenomics/pre-commits
+    rev: "v0.1.3"
+    hooks:
+      - id: cpg-id-checker
+
   - repo: https://github.com/ambv/black
     rev: 23.12.1
     hooks:
