--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -107,7 +107,7 @@ jobs:
             curl --fail --silent --show-error -X POST \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "Content-Type:application/json" \
-                -d "'$req_obj'" \
+                -d "$req_obj" \
                 $URL && break || { exit_status=$?; sleep 5; }
 
             if [ $i -eq 3 ]; then
