Hail 0.2.132 switched from raw setup.py to module build
The build module is not installed by default on our image, so we
need to install it explicitly for the /usr/local/bin/python3.10
in use (hence a Debian package would not be applicable).

--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -19,6 +19,7 @@ RUN apt-get update && \
         software-properties-common && \
     rm -r /var/lib/apt/lists/* && \
     rm -r /var/cache/apt/* && \
+    pip --no-cache-dir install build && \
     # Install phantomjs with a workaround for libssl_conf.so:
     # https://github.com/bazelbuild/rules_closure/issues/351#issuecomment-854628326
     cd /opt && \
