--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -14,13 +14,10 @@ permissions:
 jobs:
   deploy_server:
     runs-on: ubuntu-latest
-    environment: production
     env:
       DOCKER_BUILDKIT: 1
       BUILDKIT_PROGRESS: plain
       CLOUDSDK_CORE_DISABLE_PROMPTS: 1
-      DRIVER_IMAGE: australia-southeast1-docker.pkg.dev/analysis-runner/images/driver
-      SERVER_IMAGE: australia-southeast1-docker.pkg.dev/analysis-runner/images/server
 
     steps:
     - name: "checkout analysis-runner repo"
@@ -62,64 +59,9 @@ jobs:
         docker build \
           -f driver/Dockerfile.hail \
           --build-arg HAIL_SHA=$HAIL_SHA \
-          --tag $DRIVER_IMAGE:latest \
-          --tag $DRIVER_IMAGE:$IMAGE_TAG \
+          --tag banana \
           driver
 
-    - name: "push driver image"
+    - name: "test driver image"
       run: |
-        docker push $DRIVER_IMAGE:$IMAGE_TAG
-        docker push $DRIVER_IMAGE:latest
-
-    - name: "build server image"
-      run: |
-        docker build \
-          --build-arg DRIVER_IMAGE=$DRIVER_IMAGE:latest \
-          --tag $SERVER_IMAGE:latest \
-          --tag $SERVER_IMAGE:$IMAGE_TAG \
-          server
-
-    - name: "push server image"
-      run: |
-        docker push $SERVER_IMAGE:$IMAGE_TAG
-        docker push $SERVER_IMAGE:latest
-
-    - name: "deploy server-test"
-      run: |
-        gcloud run deploy server-test --region australia-southeast1 \
-          --no-allow-unauthenticated --platform managed \
-          --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE:$IMAGE_TAG,MEMBERS_CACHE_LOCATION=gs://cpg-members-group-cache \
-          --image $SERVER_IMAGE:$IMAGE_TAG
-
-    - name: "submit test batch"
-      run: |
-        URL=$(gcloud run services describe server-test --region australia-southeast1 --platform managed --format "value(status.url)")
-        TOKEN=$(gcloud auth print-identity-token --impersonate-service-account="server-deploy@analysis-runner.iam.gserviceaccount.com" --audiences="$URL" --include-email)
-
-        req_obj='{"output": "ci-test-batch/v42", "dataset": "fewgenomes", "accessLevel": "test", "repo": "analysis-runner", "commit": "${{ github.sha }}", "cwd": "test", "script": ["./main.py"], "description": "analysis-runner-test", "wait": true}'
-
-        # sometimes the container takes about 3-4 minutes to load the first time
-        # this causes a timeout because we're waiting, so we retry a few times
-        exit_status=0
-        for i in {1..3}; do
-            curl --fail --silent --show-error -X POST \
-                -H "Authorization: Bearer $TOKEN" \
-                -H "Content-Type:application/json" \
-                -d "$req_obj" \
-                $URL && break || { exit_status=$?; sleep 5; }
-
-            if [ $i -eq 3 ]; then
-                echo "Failed to submit test batch"
-                exit $exit_status
-            fi
-
-            echo "Retrying due to curl exit status: $exit_status ..."
-
-        done
-
-    - name: "deploy server"
-      run: |
-        gcloud run deploy server --region australia-southeast1 \
-          --no-allow-unauthenticated --platform managed \
-          --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE:$IMAGE_TAG,MEMBERS_CACHE_LOCATION=gs://cpg-members-group-cache \
-          --image $SERVER_IMAGE:$IMAGE_TAG
+        docker run banana python -c 'import hail; print(f"XXX Two: {hail.version()}")'
