--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -39,20 +39,20 @@ jobs:
       run: |
         echo "IMAGE_TAG=${{ github.sha }}-hail-$HAIL_SHA" >> $GITHUB_ENV
 
-#    - id: "google-cloud-auth"
-#      name: "Authenticate to Google Cloud"
-#      uses: google-github-actions/auth@v2
-#      with:
-#        workload_identity_provider: "projects/370374240567/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
-#        service_account: "server-deploy@analysis-runner.iam.gserviceaccount.com"
+    - id: "google-cloud-auth"
+      name: "Authenticate to Google Cloud"
+      uses: google-github-actions/auth@v2
+      with:
+        workload_identity_provider: "projects/370374240567/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
+        service_account: "server-deploy@analysis-runner.iam.gserviceaccount.com"
 
     - id: "google-cloud-sdk-setup"
       name: "Set up Cloud SDK"
       uses: google-github-actions/setup-gcloud@v2
 
-#    - name: "gcloud docker auth"
-#      run: |
-#        gcloud auth configure-docker marketplace.gcr.io,australia-southeast1-docker.pkg.dev
+    - name: "gcloud docker auth"
+      run: |
+        gcloud auth configure-docker marketplace.gcr.io,australia-southeast1-docker.pkg.dev
 
     - name: "build driver image"
       run: |
