--- a/.github/workflows/copy_dataproc_init_scripts.yaml
+++ b/.github/workflows/copy_dataproc_init_scripts.yaml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   copy_init_scripts:
     runs-on: ubuntu-latest
-
+    environment: production
     steps:
     - name: "checkout repo"
       uses: actions/checkout@v4
