Build also needs venv to be explicitly installed

--- a/dataproc/Dockerfile
+++ b/dataproc/Dockerfile
@@ -21,6 +21,7 @@ RUN apt-get update && \
     openjdk-8-jdk-headless \
     python3-build \
     python3-pip \
+    python3-venv \
     rsync \
     zip && \
     echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
