--- a/.github/workflows/deploy_dataproc.yaml
+++ b/.github/workflows/deploy_dataproc.yaml
@@ -5,6 +5,9 @@ on:
       hail_version:
         description: "Hail version"
         required: true
+  push:
+    branches:
+      - dataproc-deploy-script
 
 permissions:
   contents: read
