Put a default dataproc version if not available as a temp

--- a/.github/workflows/deploy_dataproc.yaml
+++ b/.github/workflows/deploy_dataproc.yaml
@@ -45,5 +45,5 @@ jobs:
           cd dataproc
           gcloud builds submit \
             --timeout=1h \
-            --tag=$DOCKER_IMAGE:hail-${{ github.event.inputs.hail_version }} \
+            --tag=$DOCKER_IMAGE:hail-${{ github.event.inputs.hail_version || '0.2.132' }} \
             .
