--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,7 +48,7 @@ jobs:
   sonarqube:
     name: SonarQube scan
     runs-on: ubuntu-latest
-    needs: unittests
+    needs: test
     environment: production
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'
     steps:
