--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,3 +5,4 @@ cpg-utils>=4.12.1
 pre-commit
 pylint
 toml
+setuptools>=65.5.1 # not directly required, pinned by pip-audit to avoid a vulnerability
