--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -34,7 +34,7 @@ RUN apt-get update && \
     cd hail && \
     # Install locally, avoiding the need for a pip package.
     # DEPLOY_REMOTE avoids a dev suffix being appended to dataproc initialization paths.
-    make install DEPLOY_REMOTE=1 && \
+    make install DEPLOY_REMOTE=1 HAIL_RELEASE_MODE=1 && \
     cd ../.. && \
     rm -rf hail && \
     pip --no-cache-dir install \
